// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design snapshot renders all items except feedback 1`] = `
<Design
  className="foo"
  classes={
    Object {
      "choices": "Design-choices-6",
      "design": "Design-design-4",
      "langControls": "Design-langControls-5",
      "orientation": "Design-orientation-7",
      "prompt": "Design-prompt-2",
      "promptHolder": "Design-promptHolder-1",
      "row": "Design-row-3",
      "settings": "Design-settings-8",
    }
  }
  model={
    Object {
      "answerAreaLabel": "Answer Label goes here",
      "choiceAreaLabel": "Choice Label goes here",
      "choiceAreaLayout": "vertical",
      "choices": Array [
        Object {
          "id": "c1",
          "label": "Choice 1",
        },
      ],
      "configure": Object {
        "answerLabel": "Answer label",
        "choiceLabel": "Choice label",
        "choicesLabel": "Choices",
        "editableChoiceLabel": false,
        "enableImagesLabel": "Enable Images",
        "imagesEnabled": false,
        "itemStemLabel": "Item Stem",
        "numberedGuidesLabel": "Numbered Guides",
        "orientationLabel": "Orientation",
        "partialScoringLabel": "Partial Scoring",
        "placementAreaLabel": "Placement Area",
        "removeTileAfterPlacing": true,
        "removeTilesLabel": "Remove tiles after placing",
        "settingsChoiceLabel": true,
        "settingsChoicesLabel": true,
        "settingsEnableImages": true,
        "settingsFeedback": false,
        "settingsItemStemChange": true,
        "settingsNumberedGuides": true,
        "settingsOrientation": true,
        "settingsPartialScoring": true,
        "settingsPlacementArea": true,
        "settingsPlacementAreaLabel": true,
        "settingsRemoveTileAfterPlacing": false,
        "settingsShuffle": true,
        "shuffleLabel": "Shuffle Choices",
      },
      "correctResponse": Array [
        Object {
          "id": "c1",
        },
      ],
      "itemStem": "Question Prompt goes here",
      "placementArea": true,
      "showOrdering": true,
      "shuffle": false,
    }
  }
  onChange={[MockFunction]}
  onModelChange={[MockFunction]}
/>
`;

exports[`design snapshot renders all items except the item stem input 1`] = `
<Design
  className="foo"
  classes={
    Object {
      "choices": "Design-choices-6",
      "design": "Design-design-4",
      "langControls": "Design-langControls-5",
      "orientation": "Design-orientation-7",
      "prompt": "Design-prompt-2",
      "promptHolder": "Design-promptHolder-1",
      "row": "Design-row-3",
      "settings": "Design-settings-8",
    }
  }
  model={
    Object {
      "answerAreaLabel": "Answer Label goes here",
      "choiceAreaLabel": "Choice Label goes here",
      "choiceAreaLayout": "vertical",
      "choices": Array [
        Object {
          "id": "c1",
          "label": "Choice 1",
        },
      ],
      "configure": Object {
        "answerLabel": "Answer label",
        "choiceLabel": "Choice label",
        "choicesLabel": "Choices",
        "editableChoiceLabel": false,
        "enableImagesLabel": "Enable Images",
        "imagesEnabled": false,
        "itemStemLabel": "Item Stem",
        "numberedGuidesLabel": "Numbered Guides",
        "orientationLabel": "Orientation",
        "partialScoringLabel": "Partial Scoring",
        "placementAreaLabel": "Placement Area",
        "removeTileAfterPlacing": true,
        "removeTilesLabel": "Remove tiles after placing",
        "settingsChoiceLabel": true,
        "settingsChoicesLabel": true,
        "settingsEnableImages": true,
        "settingsFeedback": false,
        "settingsItemStemChange": false,
        "settingsNumberedGuides": true,
        "settingsOrientation": true,
        "settingsPartialScoring": true,
        "settingsPlacementArea": true,
        "settingsPlacementAreaLabel": true,
        "settingsRemoveTileAfterPlacing": false,
        "settingsShuffle": true,
        "shuffleLabel": "Shuffle Choices",
      },
      "correctResponse": Array [
        Object {
          "id": "c1",
        },
      ],
      "itemStem": "Question Prompt goes here",
      "placementArea": true,
      "showOrdering": true,
      "shuffle": false,
    }
  }
  onChange={[MockFunction]}
  onModelChange={[MockFunction]}
/>
`;

exports[`design snapshot renders all items except the prompt input 1`] = `
<Design
  className="foo"
  classes={
    Object {
      "choices": "Design-choices-6",
      "design": "Design-design-4",
      "langControls": "Design-langControls-5",
      "orientation": "Design-orientation-7",
      "prompt": "Design-prompt-2",
      "promptHolder": "Design-promptHolder-1",
      "row": "Design-row-3",
      "settings": "Design-settings-8",
    }
  }
  model={
    Object {
      "answerAreaLabel": "Answer Label goes here",
      "choiceAreaLabel": "Choice Label goes here",
      "choiceAreaLayout": "vertical",
      "choices": Array [
        Object {
          "id": "c1",
          "label": "Choice 1",
        },
      ],
      "configure": Object {
        "answerLabel": "Answer label",
        "choiceLabel": "Choice label",
        "choicesLabel": "Choices",
        "editableChoiceLabel": false,
        "enableImagesLabel": "Enable Images",
        "imagesEnabled": false,
        "itemStemLabel": "Item Stem",
        "numberedGuidesLabel": "Numbered Guides",
        "orientationLabel": "Orientation",
        "partialScoringLabel": "Partial Scoring",
        "placementAreaLabel": "Placement Area",
        "removeTileAfterPlacing": true,
        "removeTilesLabel": "Remove tiles after placing",
        "settingsChoiceLabel": true,
        "settingsChoicesLabel": true,
        "settingsEnableImages": true,
        "settingsFeedback": false,
        "settingsItemStemChange": false,
        "settingsNumberedGuides": true,
        "settingsOrientation": true,
        "settingsPartialScoring": true,
        "settingsPlacementArea": true,
        "settingsPlacementAreaLabel": true,
        "settingsRemoveTileAfterPlacing": false,
        "settingsShuffle": true,
        "shuffleLabel": "Shuffle Choices",
      },
      "correctResponse": Array [
        Object {
          "id": "c1",
        },
      ],
      "itemStem": "Question Prompt goes here",
      "placementArea": true,
      "showOrdering": true,
      "shuffle": false,
    }
  }
  onChange={[MockFunction]}
  onModelChange={[MockFunction]}
/>
`;

exports[`design snapshot renders all items with defaultProps 1`] = `
<Design
  className="foo"
  classes={
    Object {
      "choices": "Design-choices-6",
      "design": "Design-design-4",
      "langControls": "Design-langControls-5",
      "orientation": "Design-orientation-7",
      "prompt": "Design-prompt-2",
      "promptHolder": "Design-promptHolder-1",
      "row": "Design-row-3",
      "settings": "Design-settings-8",
    }
  }
  model={
    Object {
      "answerAreaLabel": "Answer Label goes here",
      "choiceAreaLabel": "Choice Label goes here",
      "choiceAreaLayout": "vertical",
      "choices": Array [
        Object {
          "id": "c1",
          "label": "Choice 1",
        },
      ],
      "configure": Object {
        "answerLabel": "Answer label",
        "choiceLabel": "Choice label",
        "choicesLabel": "Choices",
        "editableChoiceLabel": false,
        "enableImagesLabel": "Enable Images",
        "imagesEnabled": false,
        "itemStemLabel": "Item Stem",
        "numberedGuidesLabel": "Numbered Guides",
        "orientationLabel": "Orientation",
        "partialScoringLabel": "Partial Scoring",
        "placementAreaLabel": "Placement Area",
        "removeTileAfterPlacing": true,
        "removeTilesLabel": "Remove tiles after placing",
        "settingsChoiceLabel": true,
        "settingsChoicesLabel": true,
        "settingsEnableImages": true,
        "settingsFeedback": true,
        "settingsItemStemChange": true,
        "settingsNumberedGuides": true,
        "settingsOrientation": true,
        "settingsPartialScoring": true,
        "settingsPlacementArea": true,
        "settingsPlacementAreaLabel": true,
        "settingsRemoveTileAfterPlacing": false,
        "settingsShuffle": true,
        "shuffleLabel": "Shuffle Choices",
      },
      "correctResponse": Array [
        Object {
          "id": "c1",
        },
      ],
      "itemStem": "Question Prompt goes here",
      "placementArea": true,
      "showOrdering": true,
      "shuffle": false,
    }
  }
  onChange={[MockFunction]}
  onModelChange={[MockFunction]}
/>
`;
